--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <h2>Quiz board</h2>
     <p>They will answer the multiple choice questions on the website, which you'll have created and after submitting their answers, they know what they scored on the website. </p>
 </div>
+<div class="container">
+    <form action="">
+    <label for="Question 1">What is the short form of hyper text mark up language</label><br>
+    <input type="radio" id="ans1">HTML <br>
+    <input type="radio" id="ans2">THML <br>
+    <input type="radio" id="ans3">HTLM <br>
+</form>
+</div>
 
 
     <script
