--- a/index.html
+++ b/index.html
@@ -20,7 +20,30 @@
     <input type="radio" id="ans1">HTML <br>
     <input type="radio" id="ans2">THML <br>
     <input type="radio" id="ans3">HTLM <br>
+    <br>
+    <label for="Question 2">how many header sizes are available on html </label><br>
+    <input type="radio" id="ans4">5 <br>
+    <input type="radio" id="ans5">6 <br>
+    <input type="radio" id="ans8">3 <br>
+    <input type="radio" id="ans10">2 <br>
+    <input type="radio" id="ans11">4 <br>
+    <input type="radio" id="ans12">1 <br>
+    <br>
+    <label for="Question 3">Can a website without java be interactive </label><br>
+    <input type="radio" id="ans13">YES<br>
+    <input type="radio" id="ans14">NO <br>
+    <br>
+    <label for="Question 3">is java script used for styling </label><br>
+    <input type="radio" id="ans15">YES <br>
+    <input type="radio" id="ans16">NO <br>
+    <br>
+    <input type="Submit" id="submit asnwers">
+
 </form>
+</div>
+<br>
+<div class="container">
+    <p>copyright shiks</p>
 </div>
 
 
