--- a/index.html
+++ b/index.html
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz board</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-<div class="container">
-    <h2>Quiz board</h2>
-    <p>They will answer the multiple choice questions on the website, which you'll have created and after submitting their answers, they know what they scored on the website. </p>
-</div>
-<div class="container">
-    <form action="">
-    <label for="Question 1">What is the short form of hyper text mark up language</label><br>
-    <input type="radio" id="ans1">HTML <br>
-    <input type="radio" id="ans2">THML <br>
-    <input type="radio" id="ans3">HTLM <br>
-    <br>
-    <label for="Question 2">how many header sizes are available on html </label><br>
-    <input type="radio" id="ans4">5 <br>
-    <input type="radio" id="ans5">6 <br>
-    <input type="radio" id="ans8">3 <br>
-    <input type="radio" id="ans10">2 <br>
-    <input type="radio" id="ans11">4 <br>
-    <input type="radio" id="ans12">1 <br>
-    <br>
-    <label for="Question 3">Can a website without java be interactive </label><br>
-    <input type="radio" id="ans13">YES<br>
-    <input type="radio" id="ans14">NO <br>
-    <br>
-    <label for="Question 3">is java script used for styling </label><br>
-    <input type="radio" id="ans15">YES <br>
-    <input type="radio" id="ans16">NO <br>
-    <br>
-    <input type="Submit" id="submit asnwers">
-
-</form>
-</div>
-<br>
-<div class="container">
-    <p>copyright shiks</p>
-</div>
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Quiz board</h2>
+      <p>
+        They will answer the multiple choice questions on the website, which
+        you'll have created and after submitting their answers, they know what
+        they scored on the website.
+      </p>
+    </div>
+    <div class="container">
+      <form action="">
+        <label for="Question 1"
+          >What is the short form of hyper text mark up language</label
+        ><br />
+        <input type="radio" id="ans1" />HTML <br />
+        <input type="radio" id="ans2" />THML <br />
+        <input type="radio" id="ans3" />HTLM <br />
+        <br />
+        <label for="Question 2"
+          >how many header sizes are available on html </label
+        ><br />
+        <input type="radio" id="ans4" />5 <br />
+        <input type="radio" id="ans5" />6 <br />
+        <input type="radio" id="ans8" />3 <br />
+        <input type="radio" id="ans10" />2 <br />
+        <input type="radio" id="ans11" />4 <br />
+        <input type="radio" id="ans12" />1 <br />
+        <br />
+        <label for="Question 3"
+          >Can a website without java be interactive </label
+        ><br />
+        <input type="radio" id="ans13" />YES<br />
+        <input type="radio" id="ans14" />NO <br />
+        <br />
+        <label for="Question 3">is java script used for styling </label><br />
+        <input type="radio" id="ans15" />YES <br />
+        <input type="radio" id="ans16" />NO <br />
+        <br />
+        <input type="Submit" id="submit asnwers" />
+      </form>
+    </div>
+    <br />
+    <div class="container">
+      <p>copyright shiks</p>
+    </div>
 
     <script
-    src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
-    integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
-    crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>  
-</body>
+      src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+      integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
